--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.2",
+    "autoprefixer": "^10.4.2",
     "next": "12.1.0",
+    "postcss": "^8.4.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
     "eslint": "8.9.0",
